<resources>
    <string name="app_name">Preloved</string>

    #Auth
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already Have Account? <b><font color='#EE839F'>Login</font></b></string>
    <string name="no_have_account">Didn`t Have Account? <b><font color='#EE839F'>Register</font></b></string>
    <string name="full_name">Fullname</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="wrong_password">Wrong Password</string>

    #Auth - Error Field
    <string name="error_field_fullname_empty">Nama lengkap wajib diisi</string>
    <string name="error_field_email_empty">Email wajib diisi</string>
    <string name="error_field_email_not_valid">Masukkan email yang valid</string>
    <string name="error_field_password_empty">Password wajib diisi</string>
    <string name="error_field_password_length_below_min">Password minimal 6 karakter</string>
    <string name="error_field_password_contains_space">Password tidak menggunakan spasi</string>
    <string name="error_field_confirm_password_empty">Konfirmasi password wajib diisi</string>
    <string name="error_field_confirm_password_not_same">Konfirmasi password tidak sama</string>
    <string name="error_field_phone_empty">Phone number wajib diisi</string>
    <string name="error_field_phone_length_below_min">Phone number minimal lebih dari 10</string>
    <string name="error_field_address_empty">Address wajib diisi</string>
    <string name="error_field_city_empty">City wajib diisi</string>
    <string name="error_field_current_password_empty">Password lama wajib diisi</string>
    <string name="error_field_new_password_empty">Password baru wajib diisi</string>
    <string name="error_field_new_password_length_below_min">Password baru minimal 6 karakter</string>
    <string name="error_field_new_password_contains_space">Password baru tidak menggunakan spasi</string>
    <string name="error_field_confirm_new_password_empty">Konfirmasi password baru wajib diisi</string>
    <string name="error_field_confirm_new_password_not_same">Konfirmasi password baru tidak sama</string>

    #Home
    <string name="home">Home</string>
    <string name="search_hint">Search your preloved…</string>
    <string name="category">Category</string>

    #Bid
    <string name="description">Description</string>
    <string name="your_bid_accepted">Your Bid Had Accepted By Buyer</string>
    <string name="unfortunately">Unfortunately, Your Bid Declined By Buyer, But U Can Re-bid Again, Edit Your Bid</string>
    <string name="enter_your_bid">Enter Your Bid Price</string>
    <string name="your_bid_forwarded">Your bid will be forwarded to the Seller. If the Seller agrees to your offer, the Seller will contact you.</string>
    <string name="your_bid">Your Bid</string>
    <string name="bid">Bid</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    #Notification
    <string name="notification">Notification</string>
    <string name="no_notification">There Are No Notification</string>
    <string name="offer_decline">Offer Decline</string>

    #Notification - Create
    <string name="product_added">Product Added</string>
    <string name="message_product_added">Product Successfully Added</string>

    #Notification - Bid
    <string name="product_bid">Product Bid</string>
    <string name="message_product_null">Product has been deleted</string>
    <string name="message_product_bid_sold">Product already sold</string>
    <string name="message_product_bid_buyer">You has been bid product</string>
    <string name="message_product_bid_seller">Someone bid on your product</string>

    #Notification - Accepted
    <string name="product_accepted">Product Accepted</string>
    <string name="message_product_accepted_seller">You accept this offer</string>
    <string name="message_product_accepted_buyer">Bid offer was accepted by the Seller</string>

    #Notification - Declined
    <string name="product_declined">Product Declined</string>
    <string name="message_product_declined_seller">You decline this offer</string>
    <string name="message_product_declined_buyer">Bid offer was declined by the Seller</string>

    #Notification - Sold
    <string name="product_sold">Product Sold</string>

    #Sell
    <string name="sell">Sell</string>
    <string name="submit">Submit</string>
    <string name="sell_product">Sell Product</string>
    <string name="preview">Preview</string>
    <string name="product_data">Product Data</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="image_product">Image Product <b><font color='#EE839F'>*</font></b></string>
    <string name="select_category">Select Category</string>
    <string name="publish">Publish</string>

    #Sell - Error Field
    <string name="error_field_sell_name_empty">Nama product tidak boleh kosong</string>
    <string name="error_field_sell_description_empty">Description product tidak boleh kosong</string>
    <string name="error_field_sell_price_empty">Price product tidak boleh kosong</string>
    <string name="error_field_sell_category_empty">Category product tidak boleh kosong</string>
    <string name="error_field_sell_image_empty">Image product wajib dipasang</string>

    #Sale
    <string name="sale">Sale</string>
    <string name="change">Change</string>
    <string name="products">Products</string>
    <string name="interested">Interested</string>
    <string name="list_product">List Product</string>
    <string name="sold">Sold</string>
    <string name="history">History</string>
    <string name="no_products">No Product Show, Add First</string>
    <string name="no_product_sold">No Product Sold, Be Patient !</string>
    <string name="no_product_interested">No Product Interested, Be Patient!</string>
    <string name="max_upload">Max Upload 5 Product</string>
    <string name="info_bidder">Info Bidder</string>
    <string name="decline">Decline</string>
    <string name="chat_buyer">Chat Buyer</string>
    <string name="change_status_product">Change Status Product</string>
    <string name="yeay_you_succeed_got_fit_price">Yeay, you succeed got fit price</string>
    <string name="immediately_contact">Immediately contact the buyer via whatsapp for further transactions</string>

    #Sale - History
    <string name="status_sale_history_accepted">Product Offer Accepted</string>
    <string name="status_sale_history_declined">Product Offer Declined</string>
    <string name="status_sale_history_unknown">Product Offer Unknown</string>

    #Sale - Tab Feature
    <string-array name="tab_feature_sale">
        <item>Product</item>
        <item>Order</item>
        <item>Sold</item>
        <item>History</item>
    </string-array>

    #Sale - Bid
    <string name="update_status">Update your product sales status</string>
    <string name="calling_via_whatsapp">Calling via Whatsapp</string>
    <string name="change_status">Change Status</string>
    <string name="accepted_product">You have agreed to sell this product to the buyer</string>
    <string name="transaction_cancelled">Transaction cancelled</string>
    <string name="declined_product">You cancel the transaction of this product with the buyer</string>

    #Account
    <string name="account">Account</string>
    <string name="change_profile">Change Profile</string>
    <string name="wishlist_product">Wishlist Product</string>
    <string name="my_order">My Order</string>
    <string name="logout">Logout</string>
    <string name="city">City</string>
    <string name="change_password">Change Password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>

    #Message
    <string name="message_success_update_profile">Update profile success</string>
    <string name="success_edit_password">Successfully Edit Your Password</string>
    <string name="message_cant_edit_product">You\'re Cannot Edit Sold Product or Offered Product</string>
    <string name="message_complete_account">Please Complete Your Identity First Before Sell Product</string>
    <string name="message_want_delete_product">Are You Sure Want Delete This Product?</string>
    <string name="message_product_success">Product Successfully Add.</string>
    <string name="message_add_wishlist">Product has been added to Wishlist</string>
    <string name="message_delete_wishlist">Product has been deleted from Wishlist</string>
    <string name="message_edit_product">Successfully Edit Product</string>
    <string name="message_delete_product">Successfully Delete Product</string>
    <string name="message_exit">Are You Sure Want Logout?</string>
    <string name="message_product_add">Successfully Add Your Product.</string>
    <string name="sure">Sure</string>

    #Error Exception
    <string name="message_error_no_internet">Something is wrong with internet connection\nMake sure you have an Internet Connection and try again.</string>
    <string name="message_error_unknown">Something is wrong when fetch data\nPlease try again</string>

    #Alert Dialog
    <string name="yes">Login</string>
    <string name="no">Later</string>
    <string name="body_login">You are not logged in</string>

    #Undefined
    <string name="content_login">Welcome to PreLoved App, Please Login Before Use Application.</string>
    <string name="register_detail">Please register your identity before use Preloved.</string>
    <string name="please_login">Please Login First, Before Use This Feature</string>
    <string name="content_back_button">Back Button</string>
    <string name="add">Add</string>
    <string name="warning">Warning</string>
    <string name="date">18 Jul, 10:42</string>
    <string name="dummy_title_product">Jam Tangan Casio</string>
    <string name="rp_400_000">Rp.400.000</string>
    <string name="berhasil_di_rp_200_000">Berhasil di Rp 200.000</string>
    <string name="notif_message">Pesan Notif</string>
    <string name="product_offer">Product Offer</string>
    <string name="seller_name">Seller Name</string>
    <string name="product_selled">Product Selled</string>
    <string name="ditawar_rp_200_000">Offered Rp.200.000</string>
    <string name="OK">OK</string>
    <string name="sorry">Sorry</string>
    <string name="remove_first">Remove Your Product First Before Add Other Product</string>
    <string name="enter_name_product">Please enter name of product</string>
    <string name="enter_price_product">Please enter price of product</string>
    <string name="enter_desc_product">Please enter description of product</string>
    <string name="task_cancelled">Task Cancelled</string>
    <string name="insert_image_first">Insert Image First</string>
    <string name="post_the_product">Post The Product?</string>
    <string name="congratulations">Congratulations, You Had Got Best Price</string>
    <string name="immediately">Immediately contact the buyer via whatsapp for further transactions</string>
    <string name="your_session">Your Session Login Expired / Not Login , Please Login First</string>
    <string name="congratulation_sell">Congratulation, U Have Sell Your Product</string>
    <string name="choose_status">Choose Status First</string>
    <string name="accept_offer">Accept the Offer?</string>
    <string name="accept">Accept</string>
    <string name="decline_the_offer">Decline the Offer?</string>
    <string name="zero">0</string>
</resources>