<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/siv_product_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/image_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_status_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/overline"
        app:layout_constraintStart_toEndOf="@id/siv_product_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/product_offer" />

    <TextView
        android:id="@+id/tv_transaction_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_status_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_status_product"
        tools:text="@string/date" />

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_status_product"
        app:layout_constraintTop_toBottomOf="@id/tv_status_product"
        tools:text="@string/dummy_title_product" />

    <TextView
        android:id="@+id/tv_base_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_status_product"
        app:layout_constraintTop_toBottomOf="@id/tv_product_name"
        tools:text="@string/rp_400_000" />

    <TextView
        android:id="@+id/tv_offer_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_status_product"
        app:layout_constraintTop_toBottomOf="@id/tv_base_price"
        tools:text="@string/berhasil_di_rp_200_000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="#E5E5E5"
        app:layout_constraintTop_toBottomOf="@id/tv_offer_price" />

</androidx.constraintlayout.widget.ConstraintLayout>